<resources>
    <string name="app_name">FooJiClient</string>
    <string name="title_profile">Profile</string>
    <string name="title_settings">Settings</string>
    <string name="title_about">About</string>
    <string name="next_question"><![CDATA[Next question >>>]]></string>
    <string name="incorrect">Incorrect:</string>
    <string name="correct">Correct:</string>
    <string name="button">Button</string>
    <string name="oops">OOPS!!!</string>
    <string name="something_went_wrong">Something went wrong.</string>
    <string name="title_exit">Exit</string>
    <string name="title_statistic">Statistic</string>
    <string name="sign">by\nSerhii Huliaiev</string>
    <string name="mode">Mode:</string>
    <string name="translation">Translation</string>
    <string name="hiragana">Kana</string>
    <string name="mixed">Mixed</string>
    <string name="vocabulary">Vocabulary:</string>
    <string name="n5">N5</string>
    <string name="n4">N4</string>
    <string name="n3">N3</string>
    <string name="n2">N2</string>
    <string name="n1">N1</string>
    <string name="ok">OK</string>
    <string name="email">luksemburg.77@gmail.com</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="create_a_new_account">Create a new account</string>
    <string name="welcome_to_foojiclient">Welcome to FooJiClient!</string>
    <string name="registration">Registration</string>
    <string name="sign_in_with_google">Sign in with Google</string>
    <string name="enter_email">Email</string>
    <string name="confirm_password">Confirm password</string>
    <string name="phone_number">Phone number</string>
    <string name="location">Location</string>
    <string name="invite_code">Invite code</string>
    <string name="gender">Gender</string>
    <string name="register">Register</string>
    <string name="run_without_account">Run without account</string>
    <string name="change_password">Change password</string>
    <string name="enter_your_old_password">Enter your old password</string>
    <string name="enter_a_new_password">Enter a new password</string>
    <string name="confirm_a_new_password">Confirm a new password</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string-array name="spinner_items">
        <item>Select…</item>
        <item>Male</item>
        <item>Female</item>
    </string-array>
</resources>