<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_profile" />
    <item
        android:id="@+id/navigation_statistic"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_statistic" />
    <item
        android:id="@+id/navigation_settings"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/title_settings" />
    <item
        android:id="@+id/navigation_about"
        android:icon="@drawable/ic_dashboard_black_24dp"
        android:title="@string/title_about" />
    <item
        android:id="@+id/navigation_exit"
        android:icon="@drawable/ic_dashboard_black_24dp"
        android:textColor="@android:color/holo_red_dark"
        android:title="@string/title_exit" />



</menu>