<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintGuide_begin="0dp"
        app:layout_constraintGuide_percent="0.2"
        android:orientation="horizontal"/>

    <TextView
        android:id="@+id/text_mode"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/guideline"
        android:textAlignment="center"
        android:textSize="20sp"
        android:text="@string/mode"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        />

    <Button
        android:id="@+id/button_translation"
        android:layout_width="0dp"
        android:layout_height="73dp"
        app:layout_constraintWidth_percent="0.4"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="12dp"
        android:text="@string/translation"
        android:onClick="onTranslateClick"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/button_hiragana"
        app:layout_constraintTop_toBottomOf="@+id/text_mode"
        app:layout_constraintHorizontal_chainStyle="packed"/>

    <Button
        android:id="@+id/button_hiragana"
        android:layout_width="0dp"
        android:layout_height="73dp"
        app:layout_constraintWidth_percent="0.4"
        android:layout_marginTop="8dp"
        android:layout_marginStart="12dp"
        android:text="@string/hiragana"
        android:onClick="onHiraganaClick"
        app:layout_constraintStart_toEndOf="@+id/button_translation"
        app:layout_constraintTop_toBottomOf="@+id/text_mode"
        app:layout_constraintEnd_toEndOf="parent"/>

    <Button
        android:id="@+id/button_mixed"
        android:layout_width="0dp"
        android:layout_height="73dp"
        app:layout_constraintWidth_percent="0.4"
        android:layout_marginTop="8dp"
        android:layout_marginStart="12dp"
        android:text="@string/mixed"
        android:onClick="onMixedClick"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_translation"/>

    <TextView
        android:id="@+id/text_vocabulary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/button_mixed"
        android:textAlignment="center"
        android:textSize="20sp"
        android:text="@string/vocabulary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        />

    <Button
        android:id="@+id/button_n5"
        android:layout_width="0dp"
        android:layout_height="73dp"
        app:layout_constraintWidth_percent="0.25"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="12dp"
        android:text="@string/n5"
        android:onClick="onN5Click"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/button_n4"
        app:layout_constraintTop_toBottomOf="@+id/text_vocabulary"
        app:layout_constraintHorizontal_chainStyle="packed"/>

    <Button
        android:id="@+id/button_n4"
        android:layout_width="0dp"
        android:layout_height="73dp"
        app:layout_constraintWidth_percent="0.25"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="12dp"
        android:text="@string/n4"
        android:onClick="onN4Click"
        app:layout_constraintStart_toEndOf="@id/button_n5"
        app:layout_constraintEnd_toStartOf="@+id/button_n3"
        app:layout_constraintTop_toBottomOf="@+id/text_vocabulary"
        />

    <Button
        android:id="@+id/button_n3"
        android:layout_width="0dp"
        android:layout_height="73dp"
        app:layout_constraintWidth_percent="0.25"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="12dp"
        android:text="@string/n3"
        android:onClick="onN3Click"
        app:layout_constraintStart_toEndOf="@id/button_n4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_vocabulary"
        />

    <Button
        android:id="@+id/button_n2"
        android:layout_width="0dp"
        android:layout_height="73dp"
        app:layout_constraintWidth_percent="0.25"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="12dp"
        android:text="@string/n2"
        android:onClick="onN2Click"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/button_n1"
        app:layout_constraintTop_toBottomOf="@+id/button_n5"
        app:layout_constraintHorizontal_chainStyle="packed"
        />

    <Button
        android:id="@+id/button_n1"
        android:layout_width="0dp"
        android:layout_height="73dp"
        app:layout_constraintWidth_percent="0.25"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="12dp"
        android:text="@string/n1"
        android:onClick="onN1Click"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/button_n2"
        app:layout_constraintTop_toBottomOf="@+id/button_n5"
        app:layout_constraintHorizontal_chainStyle="packed"
        />

    <!-- <Button
        android:id="@+id/button_ok"
        android:layout_width="0dp"
        android:layout_height="73dp"
        app:layout_constraintWidth_percent="0.8"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="12dp"
        android:backgroundTint="@color/yellow"
        android:text="@string/ok"
        android:onClick="onOkClick"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        />
        -->

</androidx.constraintlayout.widget.ConstraintLayout>